# IDS-721-Project1-Rust-CLI

./: README.md
horror_movies/: Cargo.toml
horror_movies/src/: horror_movies.csv  main.rs  small_horror_movies.csv
